# Ezras-trading-ai

./: .env.example  .env.template  .gitignore  Dockerfile  Procfile  README.md  deploy.sh  nixpacks.toml  railway.toml  requirements.txt  setup_env.py
trading-ai/: .env.example  .env.example.live  .env.example.remote_sync  .env.template  .gitignore  CLAUDE.md  Procfile  README.md  pyproject.toml  requirements.txt  setup.py  setup_env.py
trading-ai/docs/: AI_REVIEW_EXECUTION_LAYER_SPEC.md  AI_REVIEW_FINAL_GOVERNANCE_FORMULAS_SPEC.md  AI_REVIEW_ORCHESTRATION_SPEC.md  AUTONOMOUS_GAP_CLOSER.md  AVENUE_MASTER_CONTRACT.md  BOT_HIERARCHY_ARCHITECTURE.md  COINBASE_AVENUE1_FIRST20_PRODUCTION_SPEC.md  COINBASE_AVENUE_A_PRELIVE_DATA_STANCE.md  CONTROLLED_LIVE_READINESS.md  CRYPTO_SPOT_GATE_B_GAINERS_MODEL.md  DAILY_MARCHBOARD.md  DATABANK_AND_ORGANISM_CONTRACT.md  DATABANK_WRITE_HALT_POLICY.md  DEPLOYMENT_BOOT_PROOF.md  EXPERIMENT_OPERATING_SYSTEM.md  FINAL_PRELIVE_GAP_AUDIT.md  FINAL_SWITCH_READINESS_AUDIT.md  GATE_B_CALIBRATION_POLICY.md  GATE_B_OPERATOR_TRUTH_MODEL.md  GATE_DISCOVERY_IDEMPOTENCY.md  GATE_DISCOVERY_PROMOTION_FLOW.md  LIVE_MICRO_OPERATOR_PACK.md  MAIN_MIND_CAPITAL_ENGINE_GOVERNANCE_SPEC.md  MICRO_TRADE_READINESS_CHECKLIST.md  MISSION_EXECUTION_LAYER.md  RUNTIME_ROOT_ISOLATION.md  SERVER_DEPLOY_AND_MICRO_TRADE_RUNBOOK.md  SERVICE_AND_BOOT_PROOF.md  SSL_RUNTIME.md  SUPERVISED_READINESS_CLOSER.md  UNIVERSAL_LIVE_GUARD.md  operator_env_setup.md
trading-ai/scripts/: COINBASE_AVENUE1_FINAL_LAUNCH_CARD.md  MONITORING_COINBASE_AVENUE1.md  accelerated_24h_autonomy_sim.sh  (+25 more)
(+1451 files in other folders)
