[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-ai"
version = "0.1.0"
description = "AI trading partner for prediction markets (Phase 1 foundation)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42",
  "openpyxl>=3.1.0",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "apscheduler>=3.10",
  "py-clob-client>=0.18.0",
  "eth-account>=0.10.0",
  "websocket-client>=1.7",
  "supabase>=2.0.0",
  "anthropic>=0.40",
  "openai>=1.40",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=8"]

[project.scripts]
trading-ai = "trading_ai.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
